<resources>
    <string name="app_name">gospytracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main_activity_title_txt">GoSpyTracker</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="current_device_id">Current Device ID</string>
    <string name="set_device_id">Set Device ID</string>
    <string name="permission_rationale">All the time location permission required for core functionality</string>
    <string name="permission_denied_explanation">All the time location permission denied; needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="unknown_location">Unknown location</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>

    //fcm
    <string name="log_token">Log Token</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
           This is the name that users will see when interacting with this channel.
           It should describe the category of notifications that will be sent through this channel
        -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">GoSpyTracker</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="fcm_message">FCM Message</string>
</resources>